more wand reworks, stats are no longer a thing